[gd_scene load_steps=7 format=3 uid="uid://dflup4wmnfxtw"]

[ext_resource type="Script" path="res://content/teleradio/hardware/TeleradioLogic.gd" id="1_ac48s"]
[ext_resource type="PackedScene" uid="uid://bhmq12t3q5h84" path="res://content/teleradio/software/os/TeleradioOS.tscn" id="2_f7a2s"]
[ext_resource type="Texture2D" uid="uid://1sqo73b550b1" path="res://content/teleradio/shared/test_image.png" id="3_0033s"]
[ext_resource type="PackedScene" uid="uid://d0ya1yvp4foq1" path="res://content/teleradio/software/os/apps/systemapps/VolumeDisplay.tscn" id="4_88rsv"]
[ext_resource type="Script" path="res://content/teleradio/hardware/TeleradioInput.gd" id="5_w1b5o"]
[ext_resource type="Script" path="res://content/teleradio/hardware/TeleradioAudio.gd" id="6_l2bn8"]

[node name="TeleradioLogic" type="Node" node_paths=PackedStringArray("tos", "_teleradio_input", "_audio")]
script = ExtResource("1_ac48s")
tos = NodePath("TeleradioViewport/TeleradioOS")
_teleradio_input = NodePath("TeleradioInput")
_audio = NodePath("TeleradioAudio")

[node name="TeleradioViewport" type="SubViewport" parent="."]
own_world_3d = true
handle_input_locally = false
positional_shadow_atlas_size = 512
positional_shadow_atlas_quad_2 = 2
positional_shadow_atlas_quad_3 = 2
size = Vector2i(600, 450)
size_2d_override = Vector2i(600, 450)
render_target_update_mode = 4

[node name="TeleradioOS" parent="TeleradioViewport" node_paths=PackedStringArray("_app_slot", "_briefing_slot") instance=ExtResource("2_f7a2s")]
unique_name_in_owner = true
_app_slot = NodePath("../AppSlot")
_briefing_slot = NodePath("../BriefingSlot")

[node name="AppSlot" type="Node2D" parent="TeleradioViewport"]
unique_name_in_owner = true
z_index = 50

[node name="BriefingSlot" type="Node2D" parent="TeleradioViewport"]
unique_name_in_owner = true
z_index = 51

[node name="Testimage" type="Sprite2D" parent="TeleradioViewport"]
visible = false
texture = ExtResource("3_0033s")
centered = false

[node name="VolumeDisplay" parent="TeleradioViewport" instance=ExtResource("4_88rsv")]
z_index = 99
z_as_relative = false

[node name="TeleradioInput" type="Node" parent="."]
script = ExtResource("5_w1b5o")

[node name="TeleradioAudio" type="Node2D" parent="." node_paths=PackedStringArray("_volume_display")]
script = ExtResource("6_l2bn8")
_volume_display = NodePath("../TeleradioViewport/VolumeDisplay")

[node name="AudioStreamPlayerOutput" type="AudioStreamPlayer2D" parent="TeleradioAudio"]
volume_db = 6.0
